[package]
version     = "0.3.2-nightly"
name        = "git-changelog"
authors     = ["Aldrin J D'Souza <code@aldrin.co>"]
description = "A tool to automate project changelog generation."
license     = "MIT"
homepage    = "https://github.com/aldrin/git-changelog"
repository  = "https://github.com/aldrin/git-changelog"
readme      = "README.md"
keywords    = ["git", "changelog", "report", "project", "status"]
categories  = ["command-line-utilities", "development-tools"]

[features]
default = ["bin", "handlebars"]
bin = ["console", "clap", "env_logger"]

[dependencies]
anyhow       = "1"
log          = "0.4"
nom          = "3.2"
chrono       = "0.4"
regex        = "1.4"
serde        = "1.0"
console      = { version = "0.14", optional = true }
handlebars   = { version = "3.5", optional = true }
env_logger   = { version = "0.8", optional = true }
serde_yaml   = "0.8"
serde_json   = "1.0"
serde_derive = "1.0"
clap         = { version = "2", features = ["yaml"], optional = true }

[dev-dependencies]
env_logger   = "0.8"
difference   = "1.0"

[lib]
name = "changelog"

[[bin]]
name = "git-changelog"
required-features = ["bin"]

[badges]
maintenance                       = { status = "actively-developed" }
travis-ci                         = { repository = "aldrin/git-changelog" }
appveyor                          = { repository = "aldrin/git-changelog" }
codecov                           = { repository = "aldrin/git-changelog" }
is-it-maintained-issue-resolution = { repository = "aldrin/git-changelog" }
is-it-maintained-open-issues      = { repository = "aldrin/git-changelog" }
